# qa_guru_python_8_19_REST_API_1

./: pyproject.toml
test/: test_requests.py
utils/: utils.py
utils/schema/: get_single_user.json
