[tool.poetry]
name = "qa-guru-python-8-19-rest-api-1"
version = "0.1.0"
description = ""
authors = ["Aleksei Kostromin <kostrominpav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.4.3"
jsonschema = "^4.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
